--- a/nd4j-backends/nd4j-backend-impls/nd4j-native/src/main/resources/org/bytedeco/javacpp/properties/macosx-x86_64-nd4j.properties
+++ b/nd4j-backends/nd4j-backend-impls/nd4j-native/src/main/resources/org/bytedeco/javacpp/properties/macosx-x86_64-nd4j.properties
@@ -21,5 +21,5 @@ platform.framework.suffix=
 platform.framework=
 platform.library.prefix=lib
 platform.library.suffix=.dylib:.so
-platform.preloadpath=/usr/local/lib/:/usr/local/opt/gcc48/lib/gcc/4.8/:/usr/local/opt/gcc/lib/gcc/5/:/usr/local/opt/gcc/lib/gcc/6/:/usr/local/opt/openblas/lib
-platform.preload=iomp5:mkl_avx:mkl_avx2:mkl_avx512_mic:mkl_def:mkl_mc3:mkl_core:mkl_gnu_thread:mkl_intel_lp64:mkl_intel_thread:mkl_rt:mkl_rt#openblas@.0:gcc_s@.1:gomp@.1:quadmath@.0:gfortran@.3:openblasp-r0.2.18
+platform.preloadpath=/usr/local/lib/:/usr/local/opt/gcc5/lib/gcc/5/:/usr/local/opt/gcc/lib/gcc/6/
+platform.preload=iomp5:mkl_avx:mkl_avx2:mkl_avx512_mic:mkl_def:mkl_mc3:mkl_core:mkl_gnu_thread:mkl_intel_lp64:mkl_intel_thread:mkl_rt:mkl_rt#openblas:gcc_s@.1:gomp@.1:quadmath@.0:gfortran@.3:stdc++@.6:openblas
